--- a/src/_includes/styles/typography.css
+++ b/src/_includes/styles/typography.css
@@ -75,6 +75,7 @@ h5 {
   font-weight: 700;
   line-height: 1.3;
   color: inherit;
+  word-break: break-word;
 }
 
 h1 {
